--- a/my_website/aboutme.html
+++ b/my_website/aboutme.html
@@ -1,21 +1,17 @@
 <!doctype html>
-	<html lang="en">
-	  <head>
-	    <meta charset="utf-8">
-	  </head>
-	  <body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>about me</title>
+  </head>
+  <body>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
-    <h1>This is my Portfolio Page!</h1>
-    <img src="images/portfolio.jpg" height="250">
-    <br>
-    <a target="_blank" href="https://scratch.mit.edu">
-      <img src="images/scratchlogo.png" height="100">
-    </a>
-	  </body>
-	</html>
-   <style>
+    <h1>This is my about me Page!</h1>
+    <img src="images/giphy.gif" height="250"</body> 
+</html>
+  <style>
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
