--- a/my_website/index.html
+++ b/my_website/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -7,8 +7,73 @@
   <body>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
+    <a href="aboutme.html">About Me</a>
     <h1>This is my test Home Page!</h1>
-    <img src="images/home.jpg" height="250">
-  </body> 
-</html>
+    <img src="images/simpsons.gif" height="250">
+    <style>
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
 
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+body {
+  background-color: red;
+}
+</style>
+</head>
+<body>
+
+<table>
+  <tr>
+    <th>subject</th>
+    <th>teacher</th>
+    <th>period</th>
+  </tr>
+  <tr>
+    <td>Psychology</td>
+    <td>Mr. Huber</td>
+    <td>1</td>
+  </tr>
+  <tr>
+    <td>Guitar</td>
+    <td>Mr. Rodriguez</td>
+    <td>2</td>
+  </tr>
+  <tr>
+    <td>Economics</td>
+    <td>Mr. Bartz</td>
+    <td>3</td>
+  </tr>
+  <tr>
+    <td>Photography</td>
+    <td>Mr. McArthur</td>
+    <td>4</td>
+  </tr>
+  <tr>
+    <td>CSU Expository</td>
+    <td>Ms. Martin</td>
+    <td>5</td>
+  </tr>
+  <tr>
+    <td>Computer Science</td>
+    <td>Mr. Nakmee</td>
+    <td>6</td>
+  </tr>
+</table>
+
+</body>
+    </body> 
+</html> 
+
+
+  
